--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^12.1.10",
+        "antd": "^4.21.5",
         "apexcharts": "^3.27.3",
         "formik": "^2.2.9",
         "framer-motion": "^4.1.17",
