--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "framer-motion": "^4.1.17",
         "history": "^5.0.0",
         "lodash": "^4.17.21",
+        "mdbreact": "^5.2.0",
         "prop-types": "^15.8.1",
         "react": "^17.0.2",
         "react-apexcharts": "^1.3.9",
