--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@testing-library/user-event": "^12.1.10",
         "antd": "^4.21.5",
         "apexcharts": "^3.27.3",
+        "axios": "^0.27.2",
         "formik": "^2.2.9",
         "framer-motion": "^4.1.17",
         "history": "^5.0.0",
