--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
         "react-dom": "^17.0.2",
         "react-draggable": "^4.4.4",
         "react-element-to-jsx-string": "^14.3.4",
+        "react-native-searchable-dropdown": "^1.1.3",
         "react-number-format": "^4.9.1",
         "react-perfect-scrollbar": "^1.5.8",
         "react-redux": "^7.2.4",
         "react-router": "^6.2.1",
         "react-router-dom": "^6.2.1",
         "react-scripts": "^4.0.3",
+        "react-select": "^3.1.0",
         "react-syntax-highlighter": "^15.4.5",
         "react-window": "^1.8.6",
         "redux": "^4.1.2",
@@ -62,7 +64,13 @@
     },
     "babel": {
         "presets": [
+            "@babel/preset-env",
             "@babel/preset-react"
+        ],
+        "plugins": [
+            [
+                "@babel/plugin-proposal-class-properties"
+            ]
         ]
     },
     "browserslist": {
@@ -80,6 +88,11 @@
     "devDependencies": {
         "@babel/core": "^7.14.3",
         "@babel/eslint-parser": "^7.15.8",
+        "@babel/plugin-proposal-class-properties": "^7.18.6",
+        "@babel/plugin-syntax-jsx": "^7.12.1",
+        "@babel/preset-env": "^7.18.6",
+        "@babel/preset-react": "^7.18.6",
+        "babel-loader": "^8.1.0",
         "eslint": "^7.27.0",
         "eslint-config-airbnb-typescript": "^12.3.1",
         "eslint-config-prettier": "^8.3.0",
