--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "antd": "^4.21.5",
         "apexcharts": "^3.27.3",
         "axios": "^0.27.2",
+        "file-saver": "^2.0.5",
         "formik": "^2.2.9",
         "framer-motion": "^4.1.17",
         "history": "^5.0.0",
@@ -52,6 +53,7 @@
         "typescript": "4.4.4",
         "umi-router": "^0.1.2",
         "web-vitals": "^1.0.1",
+        "xlsx": "^0.18.5",
         "yup": "^0.32.11"
     },
     "scripts": {
